--- a/src/components/ControlPlanes/List/WorkspacesList.module.css
+++ b/src/components/ControlPlanes/List/WorkspacesList.module.css
@@ -83,6 +83,7 @@
 }
 
 .wrapper {
+  container-type: inline-size;
   animation: fadeInDown 0.25s ease-out;
 }
 
